# nanodet

./: .clang-format  .clang-tidy  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  convert_model.sh  demo-inference-with-pytorch.ipynb  logs.txt  nanodet_plus_head.py  requirements.txt  setup.py  train.sh
.github/workflows/: workflow.yml
config/: VOCbase15.yml  nanodet-g.yml  nanodet-m-0.5x.yml  nanodet-m-1.5x-416.yml  nanodet-m-1.5x.yml  nanodet-m-416.yml  nanodet-m.yml  nanodet-plus-m-1.5x_320.yml  nanodet-plus-m-1.5x_416.yml  nanodet-plus-m-1.5x_416_yolo.yml  nanodet-plus-m_320.yml  nanodet-plus-m_320_mobileone.yml  nanodet-plus-m_416-yolo.yml  nanodet-plus-m_416.yml  nanodet_custom_xml_5strides.yml  nanodet_custom_xml_dataset.yml
config/EfficientNet-Lite/: nanodet-EfficientNet-Lite0_320.yml  nanodet-EfficientNet-Lite1_416.yml  nanodet-EfficientNet-Lite2_512.yml
config/RepVGG/: nanodet-RepVGG-A0_416.yml
config/Transformer/: nanodet-t.yml
config/convnext/: nanodet-plus_convnext-nano_640.yml
config/legacy_v0.x_configs/: nanodet-g.yml  nanodet-m-1.5x-416.yml  nanodet-m-1.5x.yml  nanodet-m.yml
config/legacy_v0.x_configs/EfficientNet-Lite/: nanodet-EfficientNet-Lite0_320.yml  nanodet-EfficientNet-Lite2_512.yml
config/legacy_v0.x_configs/Transformer/: nanodet-t.yml
demo/: demo-inference-with-pytorch.ipynb  demo.py  demo_multi_backend_python.py
demo_android_ncnn/: README.md  build.gradle  settings.gradle
demo_android_ncnn/app/: build.gradle
demo_android_ncnn/app/src/main/: AndroidManifest.xml
demo_android_ncnn/app/src/main/cpp/: CMakeLists.txt  NanoDet.cpp  NanoDet.h  YoloV4.cpp  YoloV4.h  YoloV5.cpp  YoloV5.h  jni_interface.cpp
demo_android_ncnn/gradle/wrapper/: gradle-wrapper.properties
demo_libtorch/: CMakeLists.txt  README.md  main.cpp  nanodet_libtorch.cpp  nanodet_libtorch.h
demo_mnn/: CMakeLists.txt  README.md  main.cpp  nanodet_mnn.cpp  nanodet_mnn.hpp
demo_mnn/python/: demo_mnn.py
demo_ncnn/: CMakeLists.txt  README.md  main.cpp  nanodet.cpp  nanodet.h
demo_ncnn/python/: demo_ncnn.py
demo_openvino/: CMakeLists.txt  README.md  main.cpp  nanodet_openvino.cpp  nanodet_openvino.h
demo_openvino/model/: nanodet_m.mapping  nanodet_m.xml
docs/: config_file_detail.md  update.md
eclod/: distillation.ipynb  experiment.ipynb
eclod/cfg/: task0.yml  task1.yml
eclod/run_logs/task0/logs-2024-01-29-12-40-28/: events.out.tfevents.1706528555.DESKTOP-NQKJL8K.4564.0
eclod/run_logs/task1/logs-2024-01-29-12-45-06/: logs.txt
eclod/test/logs-2024-01-29-12-40-15/: logs.txt
ml-mobileone-main/: ACKNOWLEDGEMENTS  README.md  mobileone.py
ml-mobileone-main/ModelBench/: README.md
ml-mobileone-main/ModelBench/ModelBench/: AppDelegate.swift  SceneDelegate.swift  SettingMenuViewCell.swift  ViewController.swift
ml-mobileone-main/ModelBench/ModelBench.xcodeproj/: project.pbxproj
ml-mobileone-main/ModelBench/ModelBench/Base.lproj/: Main.storyboard
ml-mobileone-main/ModelBench/ModelBench/Models/: README.txt  fetch_models.sh
nanodet/: __about__.py  __init__.py
nanodet/data/: batch_process.py  collate.py
nanodet/data/dataset/: __init__.py  base.py  coco.py  xml_dataset.py  yolo.py
nanodet/data/transform/: __init__.py  color.py  pipeline.py  warp.py
nanodet/evaluator/: __init__.py  coco_detection.py
nanodet/model/arch/: __init__.py  gfl.py  nanodet_plus.py  one_stage.py  one_stage_detector.py
nanodet/model/backbone/: __init__.py  custom_csp.py  efficientnet_lite.py  ghostnet.py  mobilenetv2.py  mobileone.py  repvgg.py  resnet.py  shufflenetv2.py  shufflenetv2_dense.py  timm_wrapper.py
nanodet/model/fpn/: __init__.py  fpn.py  ghost_pan.py  pan.py  tan.py
nanodet/model/head/: __init__.py  gfl_head.py  nanodet_head.py  nanodet_plus_head.py  simple_conv_head.py
nanodet/model/head/anchor/: anchor_generator.py  anchor_target.py  base_anchor_head.py
nanodet/model/head/assigner/: assign_result.py  atss_assigner.py  base_assigner.py  dsl_assigner.py
nanodet/model/head/sampler/: base_sampler.py  pseudo_sampler.py  (+1 more)
nanodet/model/loss/: gfocal_loss.py  iou_loss.py  utils.py  varifocal_loss.py
nanodet/model/module/: activation.py  conv.py  init_weights.py  nms.py  norm.py  scale.py  transformer.py
nanodet/model/weight_averager/: __init__.py  ema.py
nanodet/optim/: __init__.py  builder.py
nanodet/trainer/: __init__.py  dist_trainer.py  task.py  trainer.py
nanodet/util/: __init__.py  box_transform.py  check_point.py  config.py  data_parallel.py  distributed_data_parallel.py  env_utils.py  flops_counter.py  logger.py  misc.py  path.py  rank_filter.py  scatter_gather.py  util_mixins.py  visualization.py  yacs.py
tests/data/: dummy_coco.json  test_img.txt  test_img.xml
tests/test_configs/: test_config.py
tests/test_data/: test_batch_process.py  test_collate.py
tests/test_data/test_dataset/: test_cocodataset.py  test_xmldataset.py  test_yolodataset.py
tests/test_data/test_transform/: test_color.py  test_warp.py
tests/test_evaluator/: test_coco_detection.py
tests/test_models/test_backbone/: test_custom_csp.py  test_efficient_lite.py  test_ghostnet.py  test_mobilenetv2.py  test_repvgg.py  test_resnet.py  test_shufflenetv2.py  test_timm_wrapper.py
tests/test_models/test_fpn/: test_fpn.py  test_ghost_pan.py  test_pan.py  test_tan.py
tests/test_models/test_head/: test_gfl_head.py  test_nanodet_head.py  test_nanodet_plus_head.py  test_simple_conv_head.py
tests/test_models/test_loss/: test_gfocal_loss.py  test_iou_loss.py
tests/test_models/test_modules/: test_conv.py  test_dwconv.py  test_init_weights.py  test_nms.py  test_norm.py  test_repvgg_conv.py  test_scale.py  test_transformer.py
tests/test_models/test_weight_averager/: test_ema.py
tests/test_optim/: test_builder.py
tests/test_trainer/: test_lightning_task.py  test_trainer.py
tests/test_utils/: test_env_utils.py  test_flops.py  test_logger.py
tools/: convert_old_checkpoint.py  export.py  export_onnx.py  export_torchscript.py  flops.py  inference.py  test.py  train.py  train_mlflow.py  train_pl.py
tools/deprecated/: test.py  train.py
(+26 files in other folders)
